# homework-for-modern-programming-methods-

./: .gitignore  README.md  build.bat  build.sh  commands.cpp  help.txt  main  main.cpp
15.10.2025/: after_refactoring_2.cpp  build.sh
16.12.2025/: .gitignore  CMakeLists.txt  README.md  build.sh
16.12.2025/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
16.12.2025/build_ninja/projects/: cmake_install.cmake
16.12.2025/build_ninja/projects/multi-level-menu/: cmake_install.cmake  multi-level-menu
16.12.2025/build_ninja/projects/sort/: cmake_install.cmake
16.12.2025/build_ninja/projects/sort/src/: cmake_install.cmake
16.12.2025/build_ninja/projects/sort/test/: cmake_install.cmake  (+1 more)
16.12.2025/projects/: CMakeLists.txt
16.12.2025/projects/multi-level-menu/: CMakeLists.txt  main.cpp  menu_func.cpp  menu_items.hpp
16.12.2025/projects/sort/: CMakeLists.txt
16.12.2025/projects/sort/src/: CMakeLists.txt  bubble_sort.cpp  bubble_sort.hpp  bubleSort.cpp  bubleSort.hpp
16.12.2025/projects/sort/test/: CMakeLists.txt  test_bubble.cpp
24_09_2025/: books.cpp  books.h  build.sh  commands.cpp  main.cpp
24_09_2025/resources/: books.txt  help.txt
books/: books.cpp
commands/: commands.cpp  commands.h
long_numbers/: .gitignore  CMakeLists.txt  build.sh  long_numbers.cpp  long_numbers.hpp
long_numbers/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  long_numbers_tests
long_numbers/build_ninja/googletest/googletest/: CTestTestfile.cmake  cmake_install.cmake
long_numbers/build_ninja/googletest/googletest/googlemock/: CTestTestfile.cmake  cmake_install.cmake
long_numbers/build_ninja/googletest/googletest/googletest/: CTestTestfile.cmake  cmake_install.cmake
long_numbers/tests/: long_numbers_test.cpp  new_tests.cpp
mario_first/: main  main.cpp
mario_second/: game.cpp  game.hpp  main  main.cpp
menu_26.11.2025/: build.sh  menu.hpp  menu_func.hpp  menu_items.cpp
multi-level-menu/: build.sh  main  main.cpp  menu.hpp  menu_func.cpp  menu_func.hpp  menu_items.cpp  menu_items.hpp
refactoring/: commands.cpp  commands.hpp  database.cpp  database.hpp  main.cpp
refactoring(not done)/: build.bat  build.sh  commands.cpp  commands.hpp  database.cpp  database.hpp  main.cpp
refactoring(not done)/resources/: books.txt  help.txt
refactoring/resources/: books.txt
resource/: books.txt
resources/: books.txt  help.txt
vector_and_list/: CMakeLists.txt  build.sh
vector_and_list/src/: doubly_linked_list.cpp  doubly_linked_list.hpp  vector.cpp  vector.hpp
vector_and_list/tests/: list_test.cpp  vector_test.cpp
